--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -4,7 +4,7 @@
     padding:0;
     /* outline:2px solid yellow */
 }
-
+/* ###################### general classes ############ */
 .logo{
     font-size:2rem;
     font-weight: bold;
@@ -20,15 +20,16 @@
 img{
     max-width: 100%;
 }
-
-#landing{
-    max-width: 1500px;
-    margin: 0 auto;
-}
-
 .navbar{
     margin-bottom: 2em;
 }
+/* ##################landing section of homepage################### */
+#landing{
+    max-width: 1500px;
+    margin: 0 auto;
+    margin-bottom: 5em;
+}
+
 .hero-left{
     padding: 1em;
 }
@@ -44,14 +45,14 @@ img{
     font-size:1.5rem;
 }
 .hero-title{
-    font-size: clamp(2.5em,5vw,6em);
+    font-size: clamp(1.8em,4vw,6em);
     margin-bottom: 1.5em;
 }
 .hero-desc{
     width: 100%;
     line-height: 1.5;
     font-size: 1.25rem;
-    font-size: clamp(1.25em,2vw,3em);
+    font-size: clamp(1em,1.5vw,3em);
     margin-bottom: 4em;
     text-align: justify;
 }
@@ -71,4 +72,56 @@ img{
     .hero-left,.hero-right{
         width: 50%;
     }
+}
+
+/* ########### testimonial section of homepage################# */
+
+
+.testimonial-text-wrapper{
+    display: flex;
+    padding-top: 2em;
+    justify-content: center;
+    align-items: center;
+}
+.testimonial-img{
+    /* background: #11B0BB42;
+    background-blend-mode: multiply; */
+    position: relative;
+}
+
+.testimonial-words{
+    font-size: clamp(0.5rem,4vh,5rem);
+    line-height:1.5;
+    text-align: justify;
+    margin: 1em 0;
+    margin-bottom: 2em;
+}
+.person{
+    font-weight: bold;
+    text-transform:capitalize;
+}
+.testimonial-image-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (min-width:650px)
+{
+    .person-testimonial{
+        display: flex;
+        justify-content: space-between;
+    }
+    .person-testimonial>div{
+        width:48%;
+    }
+    
+    .testimonial-img{
+        padding: 2em;
+        max-width: 70%;
+     }
+     .testimonial-text{
+         max-width: 80%;
+
+     }
 }
